modelo atualizado e readme

--- a/categorizacao/templates/index.html
+++ b/categorizacao/templates/index.html
@@ -34,8 +34,9 @@
         <div class="model-section">
             <h2>3. Selecionar Modelo</h2>
             <select id="modelSelect" class="form-group">
-                <option value="tfidf">TF-IDF</option>
-                <option value="bert">BERT</option>
+                <option value="tfidf">TF-IDF (Rápido)</option>
+                <option value="bert" selected>BERT Enhanced (Mais Preciso)</option>
+                <option value="lstm">LSTM (Legacy)</option>
             </select>
         </div>
 
